Put in correct link to test git repo

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <p>Hello, world.</p>
 
-<a href=> Link to my first test repo. </a>
+<a href="https://github.com/efelton/test-github"> Link to my first test repo. </a>
 
 </body>
 </html>
