Updated to list out and link to existing 4 github projects

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
 <body>
 
-<h1>My First Heading</h1>
+<h1>Eoghan's Sample code</h1>
 
-<p>Hello, world.</p>
+<p> The following are available from here:</p>
 
-<a href="https://github.com/efelton/test-github"> Link to my first test repo. </a>
+<ul>
+	<li>  <a href="https://github.com/efelton/property-website-project">Property website</a> web project written in php </li>
+	<li> <a href="https://github.com/efelton/starjamchallenge">Starjam Challenge</a> </b> project written in Java  </li>
+	<li> <a href="https://github.com/efelton/corona-project-1">Three Games</a> project written in Corona </li>
+	<li> <a href="https://github.com/efelton/corona-project-2">A List App</a> project written in Corona </li>
+</ul>
 
 </body>
 </html>
+
